fixed layout problem in chrome 15/16

--- a/data/css/style.css
+++ b/data/css/style.css
@@ -98,7 +98,7 @@ pre {
     padding: 0px;
     background: #333 url(../image/mask.png);
     border-bottom: 1px #2d2d2d solid;
-    height: 44px;
+    height: 69px;
 }
 
 #btn_my_profile {
@@ -318,7 +318,7 @@ pre {
     padding: 0;
     position: absolute;
     left: 0;
-    top: 36px;
+    top: 40px;
     z-index: 10000;
     display: none;
     -webkit-box-shadow: 2px 2px 3px #888;
@@ -542,31 +542,29 @@ pre {
     box-shadow: inset 0 0 5px black;
 }
 
-#indication > ul {
-    height: 36px;
+#indicator_btns {
+    height: 40px;
     margin: 0 auto;
     list-style-type: none;
 }
 
-#indication li {
-    display: inline-block;
-    height: 36px;
-    width: 36px;
+#indicator_btns > div {
+    display: block;
+    height: 40px;
+    width: 40px;
     padding: 0;
     text-align: center;
-}
-
-#indication li {
     position: relative;
-    margin: 0 3px; 
+    margin: 0; 
+    float: left;
 }
 
-#indication li.stick_right {
+#indicator_btns > div.stick_right {
     position: absolute !important;
     right: 0;
 }
 
-#indication li.stick_left {
+#indicator_btns div.stick_left {
     position: absolute !important;
     left: 0;
 }
@@ -576,35 +574,35 @@ pre {
 
 #indication .indicator_btn {
     margin: 0px;
-    height: 36px;
-    width: 36px;
-    display: inline-block;
+    height: 40px;
+    width: 40px;
+    display: block;
     font-size: 12px;
     position: absolute;
     text-decoration: none;
 }
     
-#indication li > .indicator_btn:hover {
+#indication .indicator_btn:hover {
     background: #444 none no-repeat;
 }
 
-#indication li > .indicator_btn.hlight {
+#indication .indicator_btn.hlight {
     background-color: white;
     color: #36c;
 }
 
-#indication li > .indicator_btn > .icon {
+#indication .indicator_btn > .icon {
     display: block;
-    height: 36px;
-    background-position: center -43px;
+    height: 40px;
+    background-position: center center;
     background-repeat: no-repeat;
 }
 
-#indication li > .indicator_btn > img.icon {
+#indication .indicator_btn > img.icon {
     display: none;
     width: 28px;
     height: 28px;
-    margin-top: 4px;
+    margin-top: 6px;
     background-color: #333;
     -webkit-border-radius: 5px;
     border-radius: 5px;
@@ -613,27 +611,27 @@ pre {
     box-shadow: 0 1px 3px #000;
 }
 
-#indication li > .indicator_btn.unread {
+#indication .indicator_btn.unread {
     background-image: url(../image/emit.png);
     background-position: center -13px;
     background-repeat: no-repeat;
 }
 
-#indication li > .indicator_btn.selected {
+#indication .indicator_btn.selected {
     /* @TODO need a image here*/
 }
 
-#indication li > .indicator_btn.unread > span.icon {
-    background-position: center 5px;
+#indication .indicator_btn.unread > span.icon {
+    background-position: center 7px;
 }
 
-#indication li > span.shape {
+#indication  span.shape {
     content: "\00a0";
     display: none; /* reduce the damage in FF3.0 */
     position: absolute;
     width:0;
     height:0;
-    left: 10px; /* value = - border-left-width - border-right-width */
+    left: 12px; /* value = - border-left-width - border-right-width */
     bottom: 0px;
     border-style: solid;
     border-width: 8px 8px 8px 8px; /* vary these values to change the angle of the vertex */
@@ -657,15 +655,15 @@ pre {
 #indicator_compose_btn.with_label {
     text-indent: 0px;
     width: 150px !important;
-    background-position: 5px center;
+    background-position: 8px center;
 }
 
 #indicator_compose_btn.with_label span.icon {
-    background-position: 5px -43px !important;
+    background-position: 8px center !important;
 }
 
 #indicator_compose_btn.with_label.hlight span.icon {
-    background-position: 5px 5px !important;
+    background-position: 8px center !important;
 }
 
 #indication_slot {
